...
                            VStack(spacing: 16) {
                                Text(page.title)
                                    .font(.custom("Roboto", size: 30))
                                    .fontWeight(.heavy)
                                    .foregroundColor(Color.CTA2)
                                    .multilineTextAlignment(.center)
                                    .accessibilityLabel("LearnMoreTitle")

                                Image(page.imageName)
                                    .resizable()
                                    .scaledToFit()
                                    .frame(height: 230)

...
